syntax = "proto3";

package proto;

option go_package = "consensus";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message ProblematicMBsForCurrentRound {
	repeated ProblematicMBInfo ProblematicMiniBlocks = 1;
}

message ProblematicMBInfo{
	string ProblematicMBHash = 1;
	repeated string ProblematicTxHashes = 2;
	repeated string AccAdjTxHashes = 3;
}

// Message defines the data needed by spos to communicate between nodes over network in all subrounds
message Message {
	bytes    BlockHeaderHash    = 1;
	bytes    SignatureShare     = 2;
	bytes    Body               = 3;
	bytes    Header             = 4;
	bytes    PubKey             = 5;
	bytes    Signature          = 6;
	int64    MsgType            = 7;
	int64    RoundIndex         = 8;
	bytes    ChainID            = 9;
	bytes    PubKeysBitmap      = 10;
	bytes    AggregateSignature = 11;
	bytes    LeaderSignature    = 12;
	bytes    OriginatorPid      = 13;
	bytes    InvalidSigners     = 14;
	bytes	 ProblematicMBsForCurrentRound = 15;
	//map<string, ProblematicTxHashesList> PendingMiniBlocksForCurrentRound = 15; <- non si puo' fare!
	//repeated PendingMiniBlock PendingMiniBlocksForCurrentRound = 15;	
}
